# mcmc

./: .gitmodules  CMakeLists.txt  LICENSE  covid.h  distfind.h  mcmc.h  run.py  test.cpp  test.h  timer.h
notebooks/: covid.ipynb  covid2.ipynb  covid3.ipynb  covid4.ipynb  test.ipynb  test2.ipynb
